force-app/main/default/objects/Opportunity/fields/Acoplamento__c.field-meta.xml
<CustomField>
    <fullName>Acoplamento__c</fullName>
    <label>Acoplamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>