force-app/main/default/objects/Opportunity/fields/Acrescimo__c.field-meta.xml
<CustomField>
    <fullName>Acrescimo__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Acréscimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>