force-app/main/default/objects/Opportunity/fields/Adequacao__c.field-meta.xml
<CustomField>
    <fullName>Adequacao__c</fullName>
    <label>Adequações necessárias</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>