force-app/main/default/objects/Opportunity/fields/AjusteAnualTarifa__c.field-meta.xml
<CustomField>
    <fullName>AjusteAnualTarifa__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Ajuste Anual Tarifa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>