force-app/main/default/objects/Opportunity/fields/AnualSolergo__c.field-meta.xml
<CustomField>
    <fullName>AnualSolergo__c</fullName>
    <label>Anual Solergo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>