force-app/main/default/objects/Opportunity/fields/AreaM__c.field-meta.xml
<CustomField>
    <fullName>AreaM__c</fullName>
    <description>Campo para definir a Área estimada total (m²).</description>
    <label>Área estimada total (m²)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>