force-app/main/default/objects/Opportunity/fields/ArvoresEquivalentes25Anos__c.field-meta.xml
<CustomField>
    <fullName>ArvoresEquivalentes25Anos__c</fullName>
    <description>Árvores equivalentes plantadas em 25 anos.</description>
    <formula>(KwhAnual__c / 262) * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Árvores Equivalentes (25 Anos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>