force-app/main/default/objects/Opportunity/fields/AtendimentoDoConsumo__c.field-meta.xml
<CustomField>
    <fullName>AtendimentoDoConsumo__c</fullName>
    <formula>GeracaoMedioMensal__c / ConsumoMedioMensal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Atendimento de Consumo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>