force-app/main/default/objects/Opportunity/fields/AumentarDemandaContratadaFP__c.field-meta.xml
<CustomField>
    <fullName>AumentarDemandaContratadaFP__c</fullName>
    <description>Campo para definir a ação Aumentar Demanda Contratada FP.</description>
    <label>Aumentar Demanda Contratada FP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>