force-app/main/default/objects/Opportunity/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Campo para definição do Bairro da Oportunidade.</description>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>