force-app/main/default/objects/Opportunity/fields/BairroDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>BairroDoDevedor__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>