force-app/main/default/objects/Opportunity/fields/BairroDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>BairroDoProprietario__c</fullName>
    <label>Bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>