force-app/main/default/objects/Opportunity/fields/BDI__c.field-meta.xml
<CustomField>
    <fullName>BDI__c</fullName>
    <label>BDI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>