force-app/main/default/objects/Opportunity/fields/BDIOriginal__c.field-meta.xml
<CustomField>
    <fullName>BDIOriginal__c</fullName>
    <label>BDI Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>