force-app/main/default/objects/Opportunity/fields/Beneficio30anos__c.field-meta.xml
<CustomField>
    <fullName>Beneficio30anos__c</fullName>
    <label>Beneficio 30 anos (R$)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>