force-app/main/default/objects/Opportunity/fields/CargoDoResponsavel__c.field-meta.xml
<CustomField>
    <fullName>CargoDoResponsavel__c</fullName>
    <label>Cargo do Responsavel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>