force-app/main/default/objects/Opportunity/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <description>Campo para definição de Cep da Oportunidade.</description>
    <label>CEP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>