force-app/main/default/objects/Opportunity/fields/CEPDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>CEPDoDevedor__c</fullName>
    <label>CEP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>