force-app/main/default/objects/Opportunity/fields/CidadeDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>CidadeDoDevedor__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>