force-app/main/default/objects/Opportunity/fields/CidadeDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>CidadeDoProprietario__c</fullName>
    <label>Cidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>