force-app/main/default/objects/Opportunity/fields/Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Classificacao__c</fullName>
    <description>Classificação do Pedido de Compra/Venda</description>
    <label>Classificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contratos de Locação</fullName>
            </value>
            <value>
                <fullName>Contratos de Serviços</fullName>
            </value>
            <value>
                <fullName>Contratos de Licenciamento</fullName>
            </value>
            <value>
                <fullName>Compras de equipamentos e materiais</fullName>
            </value>
            <value>
                <fullName>Arrendamento de área rural</fullName>
            </value>
            <value>
                <fullName>Prestação de Serviços (v)</fullName>
            </value>
            <value>
                <fullName>Venda de equipamentos e materiais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>