force-app/main/default/objects/Opportunity/fields/ClientAdequacyCostTotal__c.field-meta.xml
<CustomField>
    <fullName>ClientAdequacyCostTotal__c</fullName>
    <description
  >Total de custos de adequação atribuídos ao cliente conforme estudo de viabilidade vinculado.</description>
    <formula>IF(
        ISBLANK(MainViability__c),
        0,
        IF(INCLUDES(MainViability__r.AdequacyCostClient__c, &apos;Ramal CC&apos;),
        BLANKVALUE(MainViability__r.DcBranchCost__c, 0), 0) +
        IF(INCLUDES(MainViability__r.AdequacyCostClient__c, &apos;Ramal CA&apos;),
        BLANKVALUE(MainViability__r.AcBranchCost__c, 0), 0) +
        IF(INCLUDES(MainViability__r.AdequacyCostClient__c, &apos;Laudo Estrutural&apos;),
        BLANKVALUE(MainViability__r.StruturalReport__c, 0), 0) +
        IF(INCLUDES(MainViability__r.AdequacyCostClient__c, &apos;Adequação Padrão&apos;),
        BLANKVALUE(MainViability__r.StandardAdequacyCost__c, 0), 0) +
        IF(INCLUDES(MainViability__r.AdequacyCostClient__c, &apos;Cobertura&apos;),
        BLANKVALUE(MainViability__r.CoberturaCost__c, 0), 0) +
        IF(INCLUDES(MainViability__r.AdequacyCostClient__c, &apos;Outros Custos&apos;),
        BLANKVALUE(MainViability__r.OtherCosts__c, 0), 0)
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Total de custos de adequação atribuídos ao cliente conforme estudo de viabilidade vinculado.</inlineHelpText>
    <label>Custo Total Adequação Cliente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>