force-app/main/default/objects/Opportunity/fields/ClientePossuiCreditoIncentivoICMS__c.field-meta.xml
<CustomField>
    <fullName>ClientePossuiCreditoIncentivoICMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Possui Crédito/Incentivo ICMS ?</label>
    <type>Checkbox</type>
</CustomField>