force-app/main/default/objects/Opportunity/fields/ClienteTemgerador__c.field-meta.xml
<CustomField>
    <fullName>ClienteTemgerador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente tem gerador ?</label>
    <type>Checkbox</type>
</CustomField>