force-app/main/default/objects/Opportunity/fields/CO2Evitado25Anos__c.field-meta.xml
<CustomField>
    <fullName>CO2Evitado25Anos__c</fullName>
    <description>CO2 evitado em 25 anos (em toneladas).</description>
    <label>CO2 Evitado (25 Anos)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>