force-app/main/default/objects/Opportunity/fields/ComentarioSolicitante__c.field-meta.xml
<CustomField>
    <fullName>ComentarioSolicitante__c</fullName>
    <description>Campo para os comentários do solicitante.</description>
    <label>Comentário do solicitante</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>