force-app/main/default/objects/Opportunity/fields/ComplementoDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>ComplementoDoDevedor__c</fullName>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>