force-app/main/default/objects/Opportunity/fields/ComplementoDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>ComplementoDoProprietario__c</fullName>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>