force-app/main/default/objects/Opportunity/fields/CondicaoPagamento2__c.field-meta.xml
<CustomField>
    <fullName>CondicaoPagamento2__c</fullName>
    <description>As configurações deste campo são controladas pela API &quot;APIcondPagamentoOpt&quot;, usada pelo SAP. Última atualização: 30/04/2026 15:29</description>
    <label>Condições de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 dias</fullName>
            </value>
            <value>
                <fullName>71</fullName>
                <label>50 X</label>
            </value>
            <value>
                <fullName>72</fullName>
                <label>30,60,90,120,150,180,210</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>CARTÃO DE CRÉDITO A VISTA</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>CARTAO DE CREDITO 2X</label>
            </value>
            <value>
                <fullName>76</fullName>
                <label>CARTAO DE CREDITO 3X</label>
            </value>
            <value>
                <fullName>77</fullName>
                <label>CARTAO DE CREDITO 4X</label>
            </value>
            <value>
                <fullName>78</fullName>
                <label>CARTAO DE CREDITO 5X</label>
            </value>
            <value>
                <fullName>79</fullName>
                <label>CARTAO DE CREDITO 6X</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>CARTAO DE CREDITO 7X</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>CARTAO DE CREDITO 8X</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>CARTAO DE CREDITO 9X</label>
            </value>
            <value>
                <fullName>83</fullName>
                <label>CARTAO DE CREDITO 10X</label>
            </value>
            <value>
                <fullName>84</fullName>
                <label>CARTAO DE CREDITO 11X</label>
            </value>
            <value>
                <fullName>85</fullName>
                <label>CARTAO DE CREDITO 12X</label>
            </value>
            <value>
                <fullName>86</fullName>
                <label>CARTAO DE CREDITO 21X</label>
            </value>
            <value>
                <fullName>87</fullName>
                <label>CARTAO DE DEBITO</label>
            </value>
            <value>
                <fullName>88</fullName>
                <label>FINANCIAMENTO</label>
            </value>
            <value>
                <fullName>89</fullName>
                <label>PIX, TED, BOLECODE</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>Entrada + 30,60,90,120,150,180,210,240</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Opção 1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Opção 2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Opção 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>