force-app/main/default/objects/Opportunity/fields/CondicoesAdicionais__c.field-meta.xml
<CustomField>
    <fullName>CondicoesAdicionais__c</fullName>
    <description>Condições adicionais da proposta comercial.</description>
    <label>Condições Adicionais</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>