force-app/main/default/objects/Opportunity/fields/CondicoesPagamento__c.field-meta.xml
<CustomField>
    <fullName>CondicoesPagamento__c</fullName>
    <description>As configurações deste campo são controladas pela API &quot;APIcondPagamentoOpt&quot;, usada pelo SAP. Última atualização: 29/05/2024 12:35</description>
    <label>Condições de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negociação</fullName>
            </value>
            <value>
                <fullName>Cartão de Crédito</fullName>
            </value>
            <value>
                <fullName>Financiamento</fullName>
            </value>
            <value>
                <fullName>Recursos Próprios</fullName>
            </value>
            <value>
                <fullName>61</fullName>
                <isActive>false</isActive>
                <label>*</label>
            </value>
            <value>
                <fullName>66</fullName>
                <isActive>false</isActive>
                <label>05 DIAS</label>
            </value>
            <value>
                <fullName>51</fullName>
                <isActive>false</isActive>
                <label>07 DIAS</label>
            </value>
            <value>
                <fullName>63</fullName>
                <isActive>false</isActive>
                <label>07 X</label>
            </value>
            <value>
                <fullName>70</fullName>
                <isActive>false</isActive>
                <label>08 X</label>
            </value>
            <value>
                <fullName>60</fullName>
                <isActive>false</isActive>
                <label>09 X</label>
            </value>
            <value>
                <fullName>31</fullName>
                <isActive>false</isActive>
                <label>10 DIAS</label>
            </value>
            <value>
                <fullName>54</fullName>
                <isActive>false</isActive>
                <label>10 X</label>
            </value>
            <value>
                <fullName>58</fullName>
                <isActive>false</isActive>
                <label>12 X</label>
            </value>
            <value>
                <fullName>50</fullName>
                <isActive>false</isActive>
                <label>12X PLANO BUSINES</label>
            </value>
            <value>
                <fullName>32</fullName>
                <isActive>false</isActive>
                <label>14 DIAS</label>
            </value>
            <value>
                <fullName>25</fullName>
                <isActive>false</isActive>
                <label>14 e 21 Dias</label>
            </value>
            <value>
                <fullName>44</fullName>
                <isActive>false</isActive>
                <label>14, 21 e 28 dias</label>
            </value>
            <value>
                <fullName>57</fullName>
                <isActive>false</isActive>
                <label>14, 28 e 42 Dias</label>
            </value>
            <value>
                <fullName>36</fullName>
                <isActive>false</isActive>
                <label>14, 28, 35, 42 Dias</label>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15 dias</label>
            </value>
            <value>
                <fullName>16</fullName>
                <isActive>false</isActive>
                <label>15 e 30 dias</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>15, 30 e 45 dias</label>
            </value>
            <value>
                <fullName>49</fullName>
                <isActive>false</isActive>
                <label>15, 90, 28 e 56 dias</label>
            </value>
            <value>
                <fullName>33</fullName>
                <isActive>false</isActive>
                <label>20 Dias</label>
            </value>
            <value>
                <fullName>53</fullName>
                <isActive>false</isActive>
                <label>20 e 40 Dias</label>
            </value>
            <value>
                <fullName>68</fullName>
                <isActive>false</isActive>
                <label>20/40/60 dias</label>
            </value>
            <value>
                <fullName>64</fullName>
                <isActive>false</isActive>
                <label>20/40/60/80/100 DIAS</label>
            </value>
            <value>
                <fullName>47</fullName>
                <isActive>false</isActive>
                <label>21, 28, 35 dias</label>
            </value>
            <value>
                <fullName>37</fullName>
                <isActive>false</isActive>
                <label>21, 28, 35, 42 Dias</label>
            </value>
            <value>
                <fullName>34</fullName>
                <isActive>false</isActive>
                <label>21, 28, 35, 42 e 49 Dias</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>