force-app/main/default/objects/Opportunity/fields/ConsultorOportunidade__c.field-meta.xml
<CustomField>
    <fullName>ConsultorOportunidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar a oportunidade ao consultor.</description>
    <label>Consultor</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>