force-app/main/default/objects/Opportunity/fields/ConsumoAlvo__c.field-meta.xml
<CustomField>
    <fullName>ConsumoAlvo__c</fullName>
    <label>Consumo Alvo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>