force-app/main/default/objects/Opportunity/fields/ConsumoAnual__c.field-meta.xml
<CustomField>
    <fullName>ConsumoAnual__c</fullName>
    <label>Consumo Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>