force-app/main/default/objects/Opportunity/fields/ConsumoAnualConsiderado__c.field-meta.xml
<CustomField>
    <fullName>ConsumoAnualConsiderado__c</fullName>
    <description>Campo para definir consumo anual considerado.</description>
    <label>Consumo Anual Considerado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>