force-app/main/default/objects/Opportunity/fields/ConsumoAnualInformado__c.field-meta.xml
<CustomField>
    <fullName>ConsumoAnualInformado__c</fullName>
    <label>Consumo Anual Informado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>