force-app/main/default/objects/Opportunity/fields/ConsumoInformadoB__c.field-meta.xml
<CustomField>
    <fullName>ConsumoInformadoB__c</fullName>
    <description>Campo para definir o consumo informado - B.</description>
    <label>Geração Desejada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>