force-app/main/default/objects/Opportunity/fields/ConsumoMedioForaPonta__c.field-meta.xml
<CustomField>
    <fullName>ConsumoMedioForaPonta__c</fullName>
    <description>Campo para definir o Consumo Médio - Fora Ponta.</description>
    <label>Consumo Médio - Fora Ponta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>