force-app/main/default/objects/Opportunity/fields/ConsumoMedioMensal__c.field-meta.xml
<CustomField>
    <fullName>ConsumoMedioMensal__c</fullName>
    <label>Consumo Médio Mensal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>