force-app/main/default/objects/Opportunity/fields/ConsumoMedioMensalB__c.field-meta.xml
<CustomField>
    <fullName>ConsumoMedioMensalB__c</fullName>
    <label>Consumo médio mensal - B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>