force-app/main/default/objects/Opportunity/fields/ConsumoMedioPonta__c.field-meta.xml
<CustomField>
    <fullName>ConsumoMedioPonta__c</fullName>
    <description>Campo para definir Consumo Médio - Ponta.</description>
    <label>Consumo Médio - Ponta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>