force-app/main/default/objects/Opportunity/fields/ConsumptionAverage__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionAverage__c</fullName>
    <description>Consumo médio informado na simulação.</description>
    <label>Consumo Médio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>