force-app/main/default/objects/Opportunity/fields/Contrato_aprovado__c.field-meta.xml
<CustomField>
    <fullName>Contrato_aprovado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato aprovado</label>
    <type>Checkbox</type>
</CustomField>