force-app/main/default/objects/Opportunity/fields/Contrato_Integrador__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Integrador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Integrador</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>