force-app/main/default/objects/Opportunity/fields/ContratoGerado__c.field-meta.xml
<CustomField>
    <fullName>ContratoGerado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar se o contrato foi gerado a partir do botão da Oportunidade.</description>
    <label>Contrato foi gerado?</label>
    <type>Checkbox</type>
</CustomField>