force-app/main/default/objects/Opportunity/fields/ConvertendoCep__c.field-meta.xml
<CustomField>
    <fullName>ConvertendoCep__c</fullName>
    <formula>CEP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convertendo Cep</label>
    <type>Text</type>
</CustomField>