force-app/main/default/objects/Opportunity/fields/ConvertendoPrazoDias__c.field-meta.xml
<CustomField>
    <fullName>ConvertendoPrazoDias__c</fullName>
    <formula>TEXT(PrazoObraDias__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convertendo Prazo Dias</label>
    <type>Text</type>
</CustomField>