force-app/main/default/objects/Opportunity/fields/Corrente_nominal_do_disjuntor_de_entrada__c.field-meta.xml
<CustomField>
    <fullName>Corrente_nominal_do_disjuntor_de_entrada__c</fullName>
    <label>Corrente nominal do disjuntor de entrada</label>
    <type>TextArea</type>
</CustomField>