force-app/main/default/objects/Opportunity/fields/CPFDoDevedor__c.field-meta.xml
<CustomField>
    <fullName>CPFDoDevedor__c</fullName>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
</CustomField>