force-app/main/default/objects/Opportunity/fields/CPFDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>CPFDoProprietario__c</fullName>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
</CustomField>