force-app/main/default/objects/Opportunity/fields/CustoAdicional__c.field-meta.xml
<CustomField>
    <fullName>CustoAdicional__c</fullName>
    <description>Campo para inclusão dos custos adicionais da proposta.</description>
    <inlineHelpText>Campo para inclusão dos custos adicionais da proposta.</inlineHelpText>
    <label>Custo Adicional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>