force-app/main/default/objects/Opportunity/fields/CustoAdicionalFixo__c.field-meta.xml
<CustomField>
    <fullName>CustoAdicionalFixo__c</fullName>
    <label>Custo Adicional Fixo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>