force-app/main/default/objects/Opportunity/fields/CustoFinanceiroWeg__c.field-meta.xml
<CustomField>
    <fullName>CustoFinanceiroWeg__c</fullName>
    <label>Custo Financeiro WEG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>