force-app/main/default/objects/Opportunity/fields/CustoMedioAnualEnergia__c.field-meta.xml
<CustomField>
    <fullName>CustoMedioAnualEnergia__c</fullName>
    <formula>CustoMedioEnergia__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custo Médio Anual de Energia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>